--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 
 	
-	<script data-main="js/client-main.js" src="js/libs/requirejs/require.js"></script>
+  	<script data-main="js/main.js" src="js/libs/requirejs/require.js"></script>
 	<script src="js/libs/appfactoryjs/appfactorystarter.js"></script>
 </body>
 </html>
